src/App.css
@import url('https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,400;0,500;0,600;1,400;1,500&display=swap');

/* Variables */
:root {
    --base-background: #f7ac7d;
    --default-text: #783C1C;
    --base-background-transparent: #f7ac7d98;

    --secondary-text: #606060;
    --default-text-transparent: #64644042;

    /* Font Variables */
    --font-main: 'Jost', sans-serif;

    /* Weight Variables */
    --weight-regular: 400;
    --weight-medium: 500;
    --weight-semibold: 600;
}

body {
    /* background-color: var(--base-background); */
    background: linear-gradient(180deg, rgba(247, 172, 125, 1) 0%, #f38b4e 100%);
    font-family: var(--font-main);
    font-weight: var(--weight-regular);
    min-height: 100vh;
}

/* replace this secondary text */
@font-face {
    font-family: 'Cormorant Upright';
    src: url(./fonts/CormorantUpright-Regular.ttf) format('truetype');
}

html {
    font-size: 16px;
    overscroll-behavior: none;
}

h1,
h2,
h3,
h4,
p,
span,
a,
select {
    color: var(--default-text);
    font-family: var(--font-main), Verdana, sans-serif;
}

h2 {
    font-size: 3rem;
    margin: 0px;
}

h3 {
    font-size: 2rem;
    margin: 0px;
}

a {
    text-underline-offset: 9px;
    text-decoration-thickness: 2px;
}

a:hover {
    transform: scale(1.05);
}

p {
    margin: 0;
}

button:hover {
    cursor: pointer;
}

/* IDs */
#page-container {
    margin: 1rem 3%;
    padding-top: 50px;
    padding-bottom: 20px;
    z-index: 1;
}

#header-img {
    display: block;
    max-width: 100%;
    height: auto !important;
    justify-self: center;
    object-fit: cover;
}

#header-info-container {
    gap: 1.5rem;
    margin-bottom: 2.5rem;
    z-index: 1;
}

#header-event-info-mobile,
#header-event-time-mobile {
    display: none;
}

#header-name {
    line-height: 1;
    margin: 1rem auto;
    font-family: var(--font-main);
    font-weight: var(--weight-medium);
    letter-spacing: .33rem;
    padding-top: 11rem;
    padding-bottom: 1rem;
}

#nav-container {
    /* position: sticky;
    top: 0;
    z-index: 2; */
    /* background-color: var(--base-background); */
    /* padding-bottom: 3rem; */
}

#nav-mobile-container {
    display: none;
}

#home-page-image {
    max-width: 1236px;
    width: 100%;
    height: auto;
    border-radius: .5rem;
    z-index: 1;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
}

#home-page-image-vert {
    display: none;
    z-index: 1;
}

#home-page-info-container-desktop {
    margin: 3.5rem 0;
    gap: 2rem;
}

#home-page-info-container-mobile {
    display: none;
    margin: 3.5rem 0;
    gap: 2rem;
    letter-spacing: .25rem;
}

#divider-vert {
    height: 200px;
    width: 1px;
    background-color: var(--default-text);
}

#divider-horiz {
    height: 1px;
    width: 200px;
    background-color: var(--default-text);
}

#footer-img {
    max-width: 80%;
    width: 80%;
    height: auto;
}

#footer-container {
    padding-bottom: 1rem;
}

#footer-info p {
    margin: 0px;
}

#footer-text {
    font-weight: var(--weight-semibold);
}

#venue-container {
    margin-bottom: 4.5rem;
}

#travel-grid-container {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    align-items: start;
    margin-bottom: 2rem;
}

#travel-divider {
    height: 100%;
    width: 1px;
    background-color: var(--default-text);
    margin: 0 2rem;
    /* padding-right: 1rem; */
}

#faq-data-mobile-container {
    display: none;
}

#registry-btn {
    width: 22rem;
    height: 4rem;
    font-size: 1.5rem;
}

#rsvp-form-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#rsvp-portal-container {
    padding-bottom: 1rem;
    scroll-margin-top: 6rem;
}

#rsvp-card-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    margin-top: 2rem;
    padding: 1rem;
}

#rsvp-form-continue-btn {
    display: block;
    background-color: var(--default-text);
    color: var(--base-background);
    font-family: var(--font-main), Verdana, sans-serif;
    font-weight: var(--weight-regular);
    border-style: none;
    border-radius: .25rem;
    font-size: 1.25rem;
    padding: .5rem 0rem;
    width: 100%;
}

#rsvp-form-continue-btn:hover {
    cursor: pointer;
    transform: scale(1.1);
    font-weight: var(--weight-semibold);
}

#rsvp-form-continue-btn:disabled {
    background-color: var(--btn-disabled);
}

#rsvp-form-continue-btn:disabled:hover {
    cursor: not-allowed;
    transform: scale(1.0);
    font-weight: 500;
}

#confirmation-card-container {
    width: 100%;
}

#rsvp-status-menu-container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#status-menu-grid {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
    /* Increased min width to accommodate icons */
    /* needs to be dynamic for screen sizes - large needs more rem so all 5 items arent on the screen */
    gap: 5rem;
    width: 100%;
    box-sizing: border-box;
    /* needs to be dynamic for screen sizes - large needs more rem so all 5 items arent on the screen */
    padding: 1rem 3rem;
    outline-style: solid;
    outline-color: #6464400e;
    border-radius: 3rem;

}

#portal-horiz-divider {
    width: 100%;
    outline-style: solid;
    outline-width: 1px;
    outline-color: var(--default-text-transparent);
    margin-bottom: 2rem;
}

#admin-container {
    padding: 1rem 10rem;
}

#admin-quickview-container {
    width: 100%;
    box-sizing: border-box;

    outline-style: solid;
    outline-width: 3px;
    outline-color: var(--default-text-transparent);
    border-radius: 1rem;

    align-items: start;
    justify-content: space-between;
    padding: 2rem;
}

#admin-group-editor-container {
    width: 100%;
    display: flex;

    align-items: baseline;
    justify-content: space-between;
}

#rsvp-viewer-container {
    align-items: start;
    justify-content: space-evenly;
    margin-top: 1rem;
}
/* ... */

